IE6/7 fixes for issue lists * background colour change on hover for IE6 * make sure whole of background is correct colour in IE6 ( li width -> 100% ) * narrow gap between link and image in IE6/7 ( .text width -> 19em )

--- a/web/cobrands/fixmystreet/_base.scss
+++ b/web/cobrands/fixmystreet/_base.scss
@@ -878,6 +878,7 @@ a:hover.button-left {
       }
       a:hover {
           color:#222222;
+          background:#e6e6e6;
           text-decoration: none;
       }
       .text,
@@ -921,12 +922,12 @@ a:hover.button-left {
     overflow:hidden;
     li {
       clear:both;
-      width:auto;
+      width:100%;
       display:block;
       overflow:hidden;
       .text {
         float:left;
-        width:18em;
+        width:19em;
       }
       .img {
         width:6.25em;
